# magick_engine

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/: common.glsl  fragment.glsl  triangle.glsl  triangle_move.glsl  vertex.glsl
engine/: color.h  core.cpp  core.h  glshader.cpp  glshader.h  graphics.cpp  graphics.h  input.cpp  input.h  log.cpp  maths.h  renderer.cpp  renderer.h
engine/audio/: audio.cpp  audio.h
engine/components/: entity.cpp  entity.h  triangle.cpp  triangle.h
engine/input/: input.cpp  input.h  inputstate.h  key.h
engine/renderer/: glshader.cpp  glshader.h  renderer.cpp  renderer.h  shader.cpp  shader.h
engine/tools/: log.cpp  log.h  maths.h  tools.cpp  tools.h
engine/web/: index.html
game/: game.cpp  game.h
libs/fmod/studio/examples/: common_platform.h
